--- a/public/css/style.css
+++ b/public/css/style.css
@@ -305,8 +305,8 @@ html, body {
 
 body {
     background-color: #fff;
-    color: #949494;
-    font-family: 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
+    color: #414141;
+    font-family: Arial, 'Arial' !important;
     font-size: 14px;
 }
 
@@ -528,6 +528,11 @@ img, .img-slider {
         height: 34px;
         width: 39px;
     }
+    .isEnterprising,.welcome{
+        width: 100% !important;
+        margin: 20px 0 0 !important;
+        padding: 0 !important;
+    }
 
     .Header-line1, .u-line {
         margin-top: 0 !important;
@@ -622,8 +627,7 @@ img, .img-slider {
 
 #header-menu ul {
     list-style: none;
-    border-top: #CCC solid 1px;
-    border-bottom: #CCC solid 1px;
+
 
     text-align: center;
 }
@@ -631,12 +635,13 @@ img, .img-slider {
 #header-menu ul li {
     display: inline-block;
     margin: 13px 10px 20px 10px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, 'Arial' !important;
+
 }
 
 #header-menu ul li a {
     color: #666;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, 'Arial' !important;
     font-size: 13px;
     text-decoration: none;
     text-transform: uppercase;
@@ -644,8 +649,8 @@ img, .img-slider {
 }
 
 #header-menu ul li a:hover {
-    border-bottom: 2px solid #ba087e;
-    border-top: 2px solid #ba087e;
+   /* border-bottom: 2px solid #ba087e;
+    border-top: 2px solid #ba087e;*/
     color: #ba087e !important;
     padding-top: 11px;
     padding-bottom: 13px;
@@ -732,6 +737,8 @@ img, .img-slider {
 
 .Content-home {
     text-align: center;
+    border-top: 1px solid #b5b5b5;
+    padding-top: 27px;
 }
 
 .content-sign-up {
@@ -742,7 +749,6 @@ img, .img-slider {
 
 .Login {
     background: rgba(13, 12, 12, 0.03);
-    border: 2px solid rgba(204, 204, 204, 0.53);
     max-width: 600px;
     height: 245px;
     padding: 20px 30px;
@@ -817,7 +823,7 @@ img, .img-slider {
 }
 
 .Login-form input {
-    border: 1.5px solid;
+    border: none;
     height: 33px;
     margin-bottom: 12px;
     margin-top: 3px;
@@ -1104,6 +1110,7 @@ input[type=file] {
 .Remember {
     display: inline-block;
     font-size: 12px;
+    margin-top: 9px;
 }
 
 .Remember a {
@@ -1306,8 +1313,8 @@ a.login-button {
 }
 
 .home-button {
-    background: rgba(130, 130, 130, 0.67);
-    border: 1px solid #949494;
+    background: #BA007C;
+    border: none;
     color: white;
     float: right;
     font-size: 12px;
@@ -1914,7 +1921,6 @@ button.icon-search {
 
 .content-creditRequest {
     background: rgba(165, 165, 165, 0.25);
-    border: 2px solid rgba(166, 157, 157, 0.63);
     height: 180px;
     margin-top: 27px;
     padding: 16px 30px;
@@ -2297,6 +2303,15 @@ footer {
     max-width: 750px;
 }
 
+.faqs .text h3, .faqs .text p{
+    max-width: 500px;
+    margin: 10px auto;
+    font-size: 15px;
+}
+.faqs .text{
+    max-width: inherit !important;
+}
+
 #modal {
     position: fixed;
     top: 0px;
@@ -2540,7 +2555,9 @@ footer {
     border-style: dashed;
     border-left: none;
 }
-
+.faqs img{
+    max-width: 500px !important;
+}
 @media all and (min-width: 30px)  and (max-width: 650px) {
     .SearchBar {
         -webkit-box-orient: vertical;
@@ -2562,6 +2579,14 @@ footer {
         -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     }
+    .tienda figure, .tienda .text{
+        width: 100% !important;
+
+    }
+    .tienda .text h3{
+        text-align: left;
+        margin: 20px 0 0;
+    }
 }
 
 .submenu {
@@ -2581,18 +2606,33 @@ footer {
 
 .isEnterprising {
     margin: 40px 0;
+    width: 50%;
+    display: inline-block;
+
 }
 
 .isEnterprising h2 {
-    margin-top: 40px;
-    font-weight: 500;
+    margin: 0;
+    font-size: 15px;
+    font-weight: 600;
 }
-
+.welcome{
+    margin: 40px 0;
+    width: 49%;
+    display: inline-block;
+    vertical-align: top;
+    padding: 0 0 0 24px;
+}
 .isEnterprising p {
     text-align: justify;
     font-weight: 100;
+    margin: 4px 0 10px;
+    font-size: 14.2px;
+    line-height: 1.2;
 }
-
+.isEnterprising p span {
+    color:#BA007C
+}
 .isEnterprising a, .Buy a {
     border: 1px solid #949497;
     margin: 40px auto;
@@ -2647,14 +2687,37 @@ footer {
     margin: 40px auto;
 }
 .Buy article{
-    display: inline-block;
-    vertical-align: top;
-    text-align: center;
-    width: 49%;
+
 }
 
+.tienda {
+    vertical-align: top;
+    text-align: center;
+    margin: 20px 0;
+}
 .tienda img{
-    max-width: 300px;
+    max-width: 430px;
+
+}
+.tienda figure, .tienda .text{
+    margin: auto;
+    display: inline-block;
+    width: 49%;
+    vertical-align: middle;
+
+}
+.tienda .text{
+    text-align: justify;
+    max-width: 500px;
+}
+
+
+.tienda .link{
+    margin: 0 auto;
+    width: 300px;
+    background: #ba007c;
+    color: white;
+    border: none;
 }
 .Buy ul {
     font-size: 18px;
