--- a/public/css/main.css
+++ b/public/css/main.css
@@ -95,4 +95,8 @@
   color: #fff;
   font-size: 1rem; }
 
+.Credit input,.Credit select{
+  text-transform: uppercase;
+}
+
 /*# sourceMappingURL=main.css.map */
