--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,102 +1,148 @@
 #request-xsl {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center; }
-  #request-xsl .imageFile {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+#request-xsl .imageFile {
     position: relative;
     margin: 0 10px 10px;
-    width: 100px; }
-    #request-xsl .imageFile .close {
-      position: absolute;
-      top: 8px;
-      right: -10px;
-      background: #e21685;
-      display: block;
-      color: #fff;
-      padding: 4px 8px;
-      cursor: pointer; }
-  #request-xsl img {
+    width: 100px;
+}
+
+#request-xsl .imageFile .close {
+    position: absolute;
+    top: 8px;
+    right: -10px;
+    background: #e21685;
+    display: block;
+    color: #fff;
+    padding: 4px 8px;
+    cursor: pointer;
+}
+
+#request-xsl img {
     width: 100%;
     height: auto;
-    max-height: 150px; }
-  #request-xsl span {
+    max-height: 150px;
+}
+
+#request-xsl span {
     display: block;
     text-align: justify;
-    word-wrap: break-word; }
+    word-wrap: break-word;
+}
 
 /*********** PRELOADER *************/
 #preload {
-  z-index: 200;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
-  background: rgba(255, 255, 255, 0.7); }
-  #preload.hidden {
-    display: none; }
+    z-index: 200;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.7);
+}
+
+#preload.hidden {
+    display: none;
+}
 
 .loader {
-  color: #e80e8a;
-  font-size: 20px;
-  margin: 100px auto;
-  width: 1em;
-  height: 1em;
-  border-radius: 50%;
-  position: relative;
-  text-indent: -9999em;
-  animation: load4 1.3s infinite linear;
-  transform: translateZ(0); }
+    color: #e80e8a;
+    font-size: 20px;
+    margin: 100px auto;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    position: relative;
+    text-indent: -9999em;
+    animation: load4 1.3s infinite linear;
+    transform: translateZ(0);
+}
 
 @keyframes load4 {
-  0%, 100% {
-    box-shadow: 0 -3em 0 0.2em, 2em -2em 0 0em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 0; }
-  12.5% {
-    box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em, 3em 0 0 0, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em; }
-  25% {
-    box-shadow: 0 -3em 0 -0.5em, 2em -2em 0 0, 3em 0 0 0.2em, 2em 2em 0 0, 0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em; }
-  37.5% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em, -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em; }
-  50% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em, -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em; }
-  62.5% {
-    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 0, -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em; }
-  75% {
-    box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0; }
-  87.5% {
-    box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em; } }
+    0%, 100% {
+        box-shadow: 0 -3em 0 0.2em, 2em -2em 0 0em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 0;
+    }
+    12.5% {
+        box-shadow: 0 -3em 0 0, 2em -2em 0 0.2em, 3em 0 0 0, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
+    }
+    25% {
+        box-shadow: 0 -3em 0 -0.5em, 2em -2em 0 0, 3em 0 0 0.2em, 2em 2em 0 0, 0 3em 0 -1em, -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
+    }
+    37.5% {
+        box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em, -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
+    }
+    50% {
+        box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em, -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
+    }
+    62.5% {
+        box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 0, -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
+    }
+    75% {
+        box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
+    }
+    87.5% {
+        box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
+    }
+}
 
 .u-button.bloqued {
-  opacity: .3;
-  cursor: default; }
+    opacity: .3;
+    cursor: default;
+}
 
 .Credit h2.title,
 .Credit span.subtitle {
-  display: block;
-  text-align: center; }
+    display: block;
+    text-align: center;
+}
 
 .Credit h2.title {
-  margin-top: 10px;
-  padding: 20px 5px;
-  font-size: 1.5rem; }
+    margin-top: 10px;
+    padding: 20px 5px;
+    font-size: 1.5rem;
+}
 
 .Credit span.subtitle {
-  font-size: 1.1rem;
-  text-transform: uppercase; }
+    font-size: 1.1rem;
+    text-transform: uppercase;
+}
 
 .notify {
-  color: #fff;
-  font-size: 1rem; }
+    color: #fff;
+    font-size: 1rem;
+}
 
-.Credit input,.Credit select{
-  text-transform: uppercase;
+.Credit input, .Credit select {
+    text-transform: uppercase;
+}
+
+.Address-format select{
+    width: 70px;
+    margin: 5px;
+}
+.Address-format input{
+    margin-right: 5px;
+    width: 35px;
+}
+.Address-format span{
+    font-size: 12px;
+    color: #888;
+    font-style: italic;
+}
+.Address-format label {
+    display: inline-block;
+    color: #999;
+    margin-bottom: 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
